client/views/objects/objects.import.less
#objects {
  background:#f6f6f6;
  text-align:center;
	margin:0;
	min-height:900px;

}
.objects-container {
	margin:0 auto;
	padding:30px 0 120px;
	width:90%;
	text-align:center;
  //opacity:0;

  &.component-mounted{
    //opacity:1;

  }


	&.objects-container--list {

		.object-teaser {
			width:100%;
			min-width:none;
			max-width:none;

			.object-thumbnail-wrap {
				width:30%;
				display:inline-block;
				vertical-align: top;

			}
			.object-text-wrap {
				width:69%;
				display:inline-block;
				vertical-align: top;

			}

			h3 {
				font-size:26px;
			}

			p {
				font-size:20px;
				line-height:1.5em;
			}

			.object-teaser-meta {
				p {
					font-size:14px;
					line-height:1.2em;
					padding:4px;
				}
			}

		}

	}


}

.objects-list {
	position:relative;
	z-index:98;

	.no-results {
		max-width:95%;
		margin:0 auto;
		text-align:center;
		p {
			text-align:center;
			margin:20px auto;
			color:@light;
			font-size:26px;
			line-height:1.3em;
			opacity:0.4;


		}

	}
}

.loading-collections {
  margin:50px auto;
  display:none;

  &.loading-visible {
    display:block;
  }

}


.object-teaser {
  padding: 1%;

  .object-teaser-wrap {
    display:block;
    vertical-align: top;
    background:@dark-theme-card;
    text-align:left;
    box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
		.transition(box-shadow 300ms ease-out);

    &:hover {
      box-shadow: -3px 0 4px 0 rgba(0,0,0,0.16) , 3px 0 4px 0 rgba(0,0,0,0.16) , 0 3px 3px 0 rgba(0,0,0,0.23);

      .object-thumbnail-wrap .object-catalog-n {
        opacity:0.7;
      }
    }

  }
  .object-thumbnail-wrap {
    width:100%;
    position:relative;
    height:240px;
		overflow:hidden;

		.object-catalog-n {
			position:absolute;
			top:20px;
			left:20px;
			z-index:3;
			display:block;
			background:@dark-theme-card;
			opacity:0.4;
			border-radius:100%;
			width:40px;
			height:40px;
			.transition(opacity 300ms ease-out);

			span {
				font-size:14px;
				font-family:@font-reading;
				font-weight:bold;
				color:@light;
				display:block;
				text-align:center;
				vertical-align: middle;
				width:100%;
				height:100%;
				padding-top:9px;

			}


		}

    img {
      width:100%;
      z-index:2;
      opacity:1;
      transition: opacity 100ms ease-out;
      position:relative;

			&.default {
				opacity:0.9;
				.blur(2px);
			}
    }

  }

	.object-text-wrap {
		padding:20px 30px;

	}

  h3 {
    margin:0;
    padding: 5px 0 0 ;
    font-family:@font-title;
    font-size:18px;
		line-height:1.3em;
		color:@light;
  }

	.object-teaser-subtitle {
		display:block;
		padding:15px 0 10px;
		font-size:14px;
		font-family:@font-label;
		line-height:1.5em;
    color:#ddd;
	}

  p {
    padding:0 0 8px;
    margin:0 2px;
    font-size:16px;
    line-height:1.2em;
    color:#ddd;
		text-transform: capitalize;
		font-family:@font-reading;

  }

	.meta-items {
		padding:10px 0 0 0;

	}

	.object-teaser-meta {
		display:inline-block;
		vertical-align: top;
		background:@dark-theme-background;
		border-radius:3px;
		margin:4px 5px 2px 0px;
		padding:0px 5px;

		label {
			display:inline-block;
			vertical-align: top;
			color:@md-primary-300;
			font-family:@font-label;
			font-size:12px;
			text-transform:uppercase;
			padding:0 2px;
			margin:0;

		}
		p {
			display:inline-block;
			vertical-align: top;
			color:@light;
			font-family:@font-light;
			font-size:14px;
			padding:4px 2px;
			margin:0;

		}
	}


}

.page-head {
  height:400px;
	.background-image-holder {
    //-webkit-filter: grayscale(30%); /* Chrome, Safari, Opera */
    //filter: grayscale(30%);
	}

}

.object-details-page {
	.object-details {
		padding:120px 0;
	}
}

.object-details {
  .object-editor {
    margin:0;
  }
}

.object-detail-header {
	hr {
		margin:15px 0;
		height:3px;
		background:@md-primary-100;
		outline:none;
		border:none;
		max-width:333px;
	}

}

// single object

.single-object-images {
	background:#222;
	min-height:500px;
	padding-bottom:10px;

	.focus-image-wrap {
		width:100%;
    text-align:center;
    img {
      display:inline-block;
      margin:0 auto;
      width:auto;
      max-width:66%;
    }
	}

	.thumbnails {
		margin:20px auto;
		max-width:1100px;
		text-align: center;
		img {
			display:inline-block;
			vertical-align: top;
			width:120px;
			margin:5px;
			cursor:pointer;
			&:hover {
				-webkit-filter: brightness(120%);
				filter: brightness(120%);
			}
		}
	}

}

.object-detail-page-head {
	height:90px;
}

.object-details {
	width:100%;
	background:@dark-theme-background;
	box-shadow:0px 0px 3px @dark-theme-toolbar;
	position:relative;
	z-index:1;
	padding:60px 0 120px;

	.object-details-inner {
		max-width:1200px;
		margin:0 auto;
		width:95%;

	}

	.object-detail-thumbnail-wrap, .object-detail-text-wrap {
		display:inline-block;
		vertical-align: top;

	}

	.object-detail-thumbnail-wrap {
		width:40%;
		padding-right:5%;
		position:relative;

		.thumbnail-embedded-overlay {
			position:absolute;
			top:20px;
			left:20px;
			background:@light;
			border-radius:2px;
			padding:12px 15px 8px;
			box-shadow:0px 0px 3px @dark-theme-toolbar;
			cursor:pointer;

			&:hover {
				background:@md-primary;
				border:1px solid @light;
				span, i {
					color:@light;
				}
			}

			span{
				color:@dark-theme-dropdown-text;
				display:inline-block;
				vertical-align: top;
				padding-left:10px;
				text-transform: uppercase;
				font-size:14px;
			}
			i {
				color:@dark-theme-toolbar;

			}


		}


	}

	h2 {
		color:@light;
	}

	.object-detail-text-wrap {
		width:50%;
		color:@light;
	}

	.object-detail-meta {

		margin:8px 0;

		label {
			font-family:@font-label;
			font-size:17px;
			padding-right:15px;
			color:#ddd;

		}
		span {
			font-family:@font-reading;
			font-size:20px;
			line-height:1.5em;
			color:@light;

		}
	}


}

.object-detail-viewer {
	width:100%;
	height:500px;
	background:#333;

	.embedded-help-text {
		width:100%;
		font-size:22px;
		text-align:center;
		margin:0px auto;
		padding:200px 0;
		color:#eee;
		font-style:italic;



	}

	.embedded-viewer {
		width:100%;
		height:0;

	}

}

.objects-detail-slider {
	width:100%;
	background:@dark-theme-ipad-3;
	padding:10px 0 1px;
}
.objects-detail-slider-inner {
	width:95%;
	margin:0 auto;
}

// search toolbar

.search-toolbar {
  width: 100%;
	padding:120px 0 20px;
	margin: 0 auto;

  .toolbar-tools {
    .search-tools {
      margin: 0px auto;
      text-align: center;
      vertical-align: top;

      .button-holder {
        border-right:1px solid black;
        display:inline-block;
        height:70px;
        &:hover {
          background-color:#f6f6f6;
        }
      }

      .button-holder.first-button {
        border-left:1px solid black;
      }

      .search-tool {
        display: inline-block;
        vertical-align: top;
        height: 69px;
        background: #fff;
        padding: 10px 20px 5px 25px;
        //border-right: 1px solid black !important;
        margin-right: -5px;
        .date-search {
          width:40%;
          margin-left:10px;
        }
      }

      .text-search {
        background: transparent;
        max-width:330px;
				width:30%;
        min-width:200px;

				&.catalog-n-search {
					max-width:200px;
				}

				input {
	        background: transparent;
					color:@dark;
					font-size:20px;
					outline:none;
					border:none;
					font-family:@font-reading;
					border-bottom:2px solid #999;

					&:focus {
						border-bottom:2px solid @dark;

					}

					&::-webkit-input-placeholder {
						font-size:20px;
						font-family:@font-reading;
						text-transform: none;
					}

					&:-moz-placeholder { /* Firefox 18- */
						font-size:20px;
						font-family:@font-reading;
						text-transform: none;
					}

					&::-moz-placeholder {  /* Firefox 19+ */
						font-size:20px;
						font-family:@font-reading;
						text-transform: none;
					}

					&:-ms-input-placeholder {
						font-size:24px;
						font-family:@font-reading;
						text-transform: none;
					}
				}

      }

    }
  }
}

.dropdown-toggle-button {
  margin:0px 10px;

  .mdi.mdi-chevron-down {
    display:inline-block;
    vertical-align: top;
  }


  &.selected {
    background:@md-primary-600;
  }
}

.search-toggle-button {
  &.search-toggle-button-active {
    background:@md-primary-600 !important;
    button{
      background:@md-primary-600 !important;

    }

    span {
      color: @light !important;
    }


  }
}

.search-facet-dropdown {
  .dropdown-list {
    width:98%;
    margin:15px auto;
    display:none;
  }
  &.dropdown-visible-regions {
    .dropdown-list-regions {
      display:block;

    }

  }
  &.dropdown-visible-photographers {
    .dropdown-list-photographers {
      display:block;

    }

  }
  &.dropdown-visible-materiality {
    .dropdown-list-materiality {
      display:block;

    }

  }
  &.dropdown-visible-sensations {
    .dropdown-list-sensations {
      display:block;

    }

  }
  &.dropdown-visible-tropes {
    .dropdown-list-tropes {
      display:block;

    }

  }
  &.dropdown-visible-frames {
    .dropdown-list-frames {
      display:block;

    }

  }
}

.load-more-wrap {
  padding:30px 0 60px;
}

